syntax = "proto3";

package inz.products;

service ProductsService {
  rpc GetProductDetails(GetProductDetailsRequest)
      returns (GetProductDetailsResponse) {}
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
  rpc DecreaseProductQuantity(DescreaseProductQuantityRequest)
      returns (DescreaseProductQuantityResponse) {}
}

message Product {
  int32 product_id = 2;
  string product_name = 3;
  int32 price = 4;
  int32 quantity = 5;
}

message ExtendedProduct {
  int32 product_id = 2;
  string product_name = 3;
  int32 price = 4;
  int32 quantity = 5;
  int32 category_id = 6;
  int32 brand_id = 7;
}

message ProductParamsRequest {
  string category_name = 1;
  string brand_name = 2;
}

message ProductParamsResponse {}

message GetProductDetailsRequest { int32 product_id = 1; }

message GetProductDetailsResponse { ExtendedProduct product = 1; }

message GetProductsRequest { ProductParamsRequest params = 1; }

message GetProductsResponse { repeated Product products = 1; }

// probably wont be used
message DescreaseProductQuantityRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

message DescreaseProductQuantityResponse {
  int32 product_id = 1;
  int32 quantity = 2;
}